[package]
name = "zeta-reticula"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance LLM inference and serving system"
license = "MIT"
repository = "https://github.com/yourusername/diffusion-llm-rs"

[lib]
name = "zeta_reticula"
path = "src/lib.rs"

[[example]]
name = "hello_workspace"
path = "examples/hello_workspace.rs"

[dependencies]
# Workspace members
diffuse-llm-rs = { path = "./diffuse-llm-rs" }
fusion-anns = { path = "./fusion-anns" }
ns-router-rs = { path = "./ns-router-rs" }
prefill-kvquant-rs = { path = "./prefill-kvquant-rs" }
salience-engine = { path = "./salience-engine" }

# External dependencies
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
byteorder = "1.5"
memmap2 = "0.9"
dashmap = "5.5"
parking_lot = "0.12"
rayon = "1.8"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
half = "2.3"
ndarray = "0.15"
candle-core = "0.3"
candle-nn = "0.3"
candle-transformers = "0.3"
tokenizers = "0.15"
arrow = "50.0"
parquet = "50.0"
lz4 = "1.24"
zstd = "0.13"
rocksdb = "0.21"
petgraph = "0.6"
crossbeam = "0.8"
num_cpus = "1.16"
libc = "0.2"
cuda-sys = "0.2"
opencl3 = "0.9"

[workspace]
members = [
    "diffuse-llm-rs",
    "prefill-kvquant-rs",
    "ns-router-rs",
    "salience-engine",
    "fusion-anns"
]