[package]
name = "zeta-reticula"
version = "0.1.0"
edition = "2021"

[dependencies]
diffuse-llm-rs = { path = "./diffuse-llm-rs" }
diffusion-prefill = { path = "./diffusion_prefill" }
fusion-anns = { path = "./fusion-anns" }
io-dedup = { path = "./io-dedup" }
ns-router-rs = { path = "./ns-router-rs" }
prefill-kvquant-rs = { path = "./prefill-kvquant-rs" }
salience-engine = { path = "./salience-engine" }
tokenizer = { path = "./tokenizer" }

[workspace]
members = [
    "diffuse-llm-rs",
    "diffusion_prefill",
    "fusion-anns",
    "io-dedup",
    "memory_manager",
    "ns-router-rs",
    "prefill-kvquant-rs",
    "quantization",
    "salience-engine",
    "tokenizer",
]

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
byteorder = "1.5"
memmap2 = "0.9"
dashmap = "6.1"
parking_lot = "0.12"
rayon = "1.8"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
half = "2.2.1"
ndarray = "0.15"
candle-core = { version = "0.9.1" }
candle-nn = { version = "0.9.1" }
candle-transformers = { version = "0.9.1" }
tokenizers = { version = "0.15.2", default-features = false, features = ["onig"] }
arrow = { version = "=53.0.0" }
parquet = { version = "=53.0.0" }
lz4 = "1.24"
zstd = "0.13"
rocksdb = { version = "0.21.0", default-features = false, features = ["lz4"] }
rand = "0.8.5"
rand_distr = "0.4.3"
rand_core = "0.6.4"
petgraph = "0.6"
crossbeam = "0.8"
num_cpus = "1.16"
libc = "0.2"
cuda-sys = "0.2"
opencl3 = "0.9"

[dev-dependencies]
criterion = "0.5"