[package]
name = "diffuse-llm-rs"
version = "0.1.0"
edition = "2021"
description = "Diffusion-based language model implementation"

[lib]
name = "diffuse_llm_rs"
path = "src/lib.rs"

[dependencies]
# Add dependencies specific to this crate here
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
