[package]
name = "fusion-anns"
version = "0.1.0"
edition = "2021"
description = "Fusion Approximate Nearest Neighbor Search implementation"

[lib]
name = "fusion_anns"
path = "src/lib.rs"

[dependencies]
# Add dependencies specific to this crate here
serde = { version = "1.0", features = ["derive"] }
rayon = "1.8"
