[package]
name = "io-dedup"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
memmap2 = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
blake3 = "1.5"
hex = "0.4"
walkdir = "2.5"
ignore = "0.4"
filetime = "0.2"
chrono = { version = "0.4", features = ["serde"] }
prefill-kvquant-rs = { path = "../prefill-kvquant-rs" }
dashmap = { workspace = true }
parking_lot = { workspace = true }
libc = { workspace = true }
