[package]
name = "ns-router-rs"
version = "0.1.0"
edition = "2021"
description = "Neuro-symbolic router implementation"

[lib]
name = "ns_router_rs"
path = "src/lib.rs"

[dependencies]
petgraph = "0.6"
dashmap = "5.5"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.9.2", features = ["small_rng"] }
rayon = "1.8"
prefill-kvquant-rs = { path = "../prefill-kvquant-rs" }
