[package]
name = "quantization"
version = "0.1.0"
edition = "2021"

description = "Efficient quantization for LLM models"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zetareticula/diffusion-llm-rs/tree/main/quantization"

[features]
default = ["std"]
std = []

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
bincode = { workspace = true }
num-traits = "0.2"
num-derive = "0.4"
bytemuck = { version = "1.0", features = ["derive"] }
ndarray = { version = "0.15", features = ["serde", "rayon"] }
prefill-kvquant-rs = { path = "../prefill-kvquant-rs", optional = true }
rand = { version = "0.8.5", optional = true }
rand_distr = { version = "0.5.1", optional = true }
ordered-float = { version = "3.0", optional = true }
half = { version = "2.2", features = ["serde"], optional = true }
tokio = { version = "1.35", features = ["full"], optional = true }
futures = { version = "0.3", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
serde_bytes = { version = "0.11", optional = true }

[dev-dependencies]
approx = "0.5"
ndarray-rand = "0.14"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
serde_json = { workspace = true }

