[package]
name = "salience-engine"
version = "0.1.0"
edition = "2021"
description = "Salience scoring and cache optimization engine"

[lib]
name = "salience_engine"
path = "src/lib.rs"

[dependencies]
dashmap = "6.1"
parking_lot = "0.12"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.8"
rand = { version = "0.8.5", features = ["small_rng"] }
ordered-float = "3.0"
tokio = { version = "1.0", features = ["full"] }
ndarray = "0.15"
prefill-kvquant-rs = { path = "../prefill-kvquant-rs" }
