[package]
name = "tokenizer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
regex = "1.11"
lazy_static = "1.4"
unicode-segmentation = "1.12"
unicode-normalization-alignments = "0.1"
